--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.6.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
   },
